feat: add option to include timestamps in ui
Closes #25